# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-Royalty-free-2.0 OR LicenseRef-Slint-Software-3.0

[package]
name = "slint-node"
description = "Internal Slint Runtime Library for NodeJS API."
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
categories = ["gui", "development-tools"]
build = "build.rs"
publish = false

[lib]
crate-type = ["cdylib"]
path = "rust/lib.rs"

[features]
# Keep in sync with features in nightly_snapshot.yaml, cpp_package.yaml, slint_tool_binary.yaml, and api/python/slint/Cargo.toml
default = ["backend-linuxkms-noseat", "backend-winit", "renderer-femtovg", "renderer-skia", "accessibility"]

backend-qt = ["slint-interpreter/backend-qt"]
backend-winit = ["slint-interpreter/backend-winit"]
backend-winit-x11 = ["slint-interpreter/backend-winit-x11"]
backend-winit-wayland = ["slint-interpreter/backend-winit-wayland"]
backend-linuxkms = ["slint-interpreter/backend-linuxkms"]
backend-linuxkms-noseat = ["slint-interpreter/backend-linuxkms-noseat"]
renderer-femtovg = ["slint-interpreter/renderer-femtovg"]
renderer-femtovg-wgpu = ["slint-interpreter/renderer-femtovg-wgpu"]
renderer-skia = ["slint-interpreter/renderer-skia"]
renderer-skia-opengl = ["slint-interpreter/renderer-skia-opengl"]
renderer-skia-vulkan = ["slint-interpreter/renderer-skia-vulkan"]
renderer-software = ["slint-interpreter/renderer-software"]
accessibility = ["slint-interpreter/accessibility"]

# The features below are additive and binary-compatible with the default build:
# they don't change the napi surface, only enabling extra runtime behavior. They
# depend on the unpublished i-slint-backend-testing crate.
#
# `system-testing` and `mcp` (the auto-started system-testing/MCP servers via the
# backend selector) are what the shipped "dev" binary enables (slint-ui-dev, see
# binaries-dev.json); `build:debug` builds that same binary locally. `testing`
# (mocked time and synthetic input) is independent: it is enabled by
# `build:testing` for this crate's own unit tests and is not part of the dev
# binary.
testing = ["dep:i-slint-backend-testing"]
system-testing = ["dep:i-slint-backend-testing", "i-slint-backend-selector/system-testing"]
mcp = ["dep:i-slint-backend-testing", "i-slint-backend-selector/mcp"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"
i-slint-compiler = { workspace = true, features = ["default"] }
i-slint-core = { workspace = true, features = ["default", "gettext-rs"] }
i-slint-backend-selector = { workspace = true }
slint-interpreter = { workspace = true, default-features = false, features = ["display-diagnostics", "internal", "compat-1-2", "system-tray"] }
spin_on = { workspace = true }
css-color-parser2 = { workspace = true }
itertools = { workspace = true }
send_wrapper = { workspace = true }
# Removed by node_package xtask
i-slint-backend-testing = { workspace = true, optional = true, features = ["internal"] }
smol_str = { workspace = true }

[target.'cfg(unix)'.dependencies]
libloading = "0.9"
async-io = "2"

[build-dependencies]
napi-build = "2"
i-slint-common = { workspace = true }
