# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-Royalty-free-1.2 OR LicenseRef-Slint-commercial

[package]
name = "slint-python"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Slint Python integration"
repository.workspace = true
homepage.workspace = true
publish = false
rust-version.workspace = true

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
i-slint-backend-selector = { workspace = true }
i-slint-core = { workspace = true }
slint-interpreter = { workspace = true, features = ["default", "display-diagnostics", "internal"] }
pyo3 = { version = "0.21.0", features = ["extension-module", "indexmap", "chrono", "abi3-py310"] }
indexmap = { version = "2.1.0" }
chrono = "0.4"
spin_on = "0.1"
css-color-parser2 = { workspace = true }

[package.metadata.maturin]
python-source = "slint"
