# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-Royalty-free-2.0 OR LicenseRef-Slint-Software-3.0

[package]
name = "slint-python"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Slint Python integration"
repository.workspace = true
homepage.workspace = true
publish = false
rust-version.workspace = true

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
i-slint-backend-selector = { workspace = true }
i-slint-core = { workspace = true }
slint-interpreter = { workspace = true, features = ["default", "display-diagnostics", "internal"] }
pyo3 = { version = "0.21.0", features = ["extension-module", "indexmap", "chrono", "abi3-py310"] }
indexmap = { version = "2.1.0" }
chrono = "0.4"
spin_on = { workspace = true }
css-color-parser2 = { workspace = true }

[package.metadata.maturin]
python-source = "slint"
