# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-Royalty-free-1.2 OR LicenseRef-Slint-commercial

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "slint"
version = "1.6.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]

[project.optional-dependencies]
dev = ["pytest"]
