[package]
name = "sixtyfps-cpp"
version = "0.0.6"
authors = ["SixtyFPS <info@sixtyfps.io>"]
edition = "2018"
license = "GPL-3.0-only"
description = "SixtyFPS C++ integration"
repository = "https://github.com/sixtyfpsui/sixtyfps"
homepage = "https://sixtyfps.io"
publish = false

[lib]
path = "lib.rs"
crate-type = ["lib", "cdylib"]

[features]
# In the future, this shouldn't be a default feature, but should be enabled by cmake
default = ["sixtyfps-interpreter"]

[dependencies]
sixtyfps-corelib = { version = "=0.0.6", path="../../sixtyfps_runtime/corelib", features = ["ffi"] }
sixtyfps-rendering-backend-default = { version = "=0.0.6", path="../../sixtyfps_runtime/rendering_backends/default" }
sixtyfps-interpreter = { version = "=0.0.6", path="../../sixtyfps_runtime/interpreter", features = ["ffi"], optional = true }

