[package]
name = "sixtyfps-cpp"
version = "0.1.6"
authors = ["SixtyFPS <info@sixtyfps.io>"]
edition = "2018"
build = "build.rs"
license = "GPL-3.0-only"
description = "SixtyFPS C++ integration"
repository = "https://github.com/sixtyfpsui/sixtyfps"
homepage = "https://sixtyfps.io"
publish = false
# prefix used to convey path to generated includes to the C++ test driver
links = "sixtyfps_cpp"

[lib]
path = "lib.rs"
crate-type = ["lib", "cdylib"]

# Note, these features need to be kept in sync (along with their defaults) in
# the C++ crate's CMakeLists.txt
[features]
interpreter = ["sixtyfps-interpreter"]
x11 = ["sixtyfps-rendering-backend-default/x11"]
wayland = ["sixtyfps-rendering-backend-default/wayland"]
backend-gl = ["sixtyfps-rendering-backend-default/sixtyfps-rendering-backend-gl"]
backend-qt = ["sixtyfps-rendering-backend-default/sixtyfps-rendering-backend-qt"]
# Enable some function used by the integration tests
testing = ["sixtyfps-rendering-backend-testing"]
default = ["backend-gl", "x11", "backend-qt"]

[dependencies]
sixtyfps-corelib = { version = "=0.1.6", path="../../sixtyfps_runtime/corelib", features = ["ffi"] }
sixtyfps-rendering-backend-default = { version = "=0.1.6", path="../../sixtyfps_runtime/rendering_backends/default" }
sixtyfps-rendering-backend-testing = { version = "=0.1.6", path="../../sixtyfps_runtime/rendering_backends/testing", optional = true }
sixtyfps-interpreter = { version = "=0.1.6", path="../../sixtyfps_runtime/interpreter", default-features = false, features = ["ffi"], optional = true }

[build-dependencies]
cbindgen = "0.20"
anyhow = "1.0"
proc-macro2 = "1.0.11"
