# Copyright © SixtyFPS GmbH <info@sixtyfps.io>
# SPDX-License-Identifier: (GPL-3.0-only OR LicenseRef-SixtyFPS-commercial)

[package]
name = "sixtyfps"
version = "0.2.0"
authors = ["SixtyFPS <info@sixtyfps.io>"]
edition = "2021"
license = "(GPL-3.0-only OR LicenseRef-SixtyFPS-commercial)"
description = "SixtyFPS Rust API"
repository = "https://github.com/sixtyfpsui/sixtyfps"
homepage = "https://sixtyfps.io"
categories = ["gui", "rendering::engine"]
keywords = ["gui", "toolkit", "graphics", "design", "ui"]

[lib]
path = "lib.rs"

[features]
backend-gl = ["sixtyfps-rendering-backend-default/sixtyfps-rendering-backend-gl", "std"]
backend-qt = ["sixtyfps-rendering-backend-default/sixtyfps-rendering-backend-qt", "std"]
std = ["sixtyfps-corelib/std"]
wayland = ["sixtyfps-rendering-backend-default/wayland", "std"]
x11 = ["sixtyfps-rendering-backend-default/x11", "std"]

default = ["backend-gl", "x11", "backend-qt"]

[dependencies]
sixtyfps-corelib = { version = "=0.2.0", path="../../internal/core", default-features = false }
sixtyfps-macros = { version = "=0.2.0", path = "sixtyfps-macros" }
sixtyfps-rendering-backend-default = { version = "=0.2.0", path="../../sixtyfps_runtime/rendering_backends/default" }

const-field-offset = { version = "0.1.2", path = "../../helper_crates/const-field-offset" }
vtable = { version = "0.1.5", path = "../../helper_crates/vtable" }

once_cell = { version = "1.5", default-features = false, features = ["alloc"] }
pin-weak = { version = "1.1", default-features = false }

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "docs/resources/sixtyfps-docs-preview.html", "--html-in-header", "docs/resources/sixtyfps-docs-highlight.html" ]
