# Copyright © SixtyFPS GmbH <info@sixtyfps.io>
# SPDX-License-Identifier: (GPL-3.0-only OR LicenseRef-SixtyFPS-commercial)

[package]
name = "sixtyfps"
version = "0.2.0"
authors = ["SixtyFPS <info@sixtyfps.io>"]
edition = "2021"
license = "(GPL-3.0-only OR LicenseRef-SixtyFPS-commercial)"
description = "SixtyFPS Rust API"
repository = "https://github.com/sixtyfpsui/sixtyfps"
homepage = "https://sixtyfps.io"
categories = ["gui", "rendering::engine"]
keywords = ["gui", "toolkit", "graphics", "design", "ui"]

[lib]
path = "lib.rs"

[features]

default = ["std", "backend-gl", "x11", "backend-qt", "compat-0-2-0"]

## Mandatory feature:
## This feature is required to keep the compatibility with SixtyFPS 0.2.0
## Newer patch version may put current functionality behind a new feature
## that would be enabled by default only if this feature was added
compat-0-2-0 = []

## Enable use of the Rust standard library.
std = ["slint-core-internal/std"]

#! ### Backends

## The Qt backend feature uses Qt for the windowing system integration and rendering.
## This backend is required to use the `native` style.
## It requires Qt 5.15 or later to be installed. If Qt is not installed, the
## backend will not be operational
backend-qt = ["sixtyfps-rendering-backend-selector/slint-backend-qt-internal", "std"]

## The GL backend uses the `winit` crate for the windowing system integration,
## and the `femtovg` crate for the rendering.
## On unix, at least one of `x11` or `wayland` features must be enabled.
backend-gl = ["sixtyfps-rendering-backend-selector/slint-backend-gl-internal", "std"]
## Same as the GL backend, with the `x11` feature of `winit` enabled
x11 = ["sixtyfps-rendering-backend-selector/x11", "backend-gl"]
## Same as the GL backend, with the `wayland` feature of `winit` enabled
wayland = ["sixtyfps-rendering-backend-selector/wayland", "backend-gl"]


[dependencies]
slint-core-internal = { version = "=0.2.0", path="../../internal/core", default-features = false }
sixtyfps-macros = { version = "=0.2.0", path = "../rs/macros" }
sixtyfps-rendering-backend-selector = { version = "=0.2.0", path="../../internal/backends/selector" }

const-field-offset = { version = "0.1.2", path = "../../helper_crates/const-field-offset" }
vtable = { version = "0.1.5", path = "../../helper_crates/vtable" }

once_cell = { version = "1.5", default-features = false, features = ["alloc"] }
pin-weak = { version = "1.1", default-features = false }
document-features = { version = "0.1.0", path = "../../helper_crates/document-features" }

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "docs/resources/sixtyfps-docs-preview.html", "--html-in-header", "docs/resources/sixtyfps-docs-highlight.html" ]
