# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-Royalty-free-2.0 OR LicenseRef-Slint-Software-3.0

[package]
name = "slint-swift"
description = "Slint Swift integration"
authors.workspace = true
documentation.workspace = true
edition = "2024"
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[lib]
path = "lib.rs"
crate-type = ["staticlib"]
name = "slint_swift"

# Note, these features need to be kept in sync with the Swift Package.swift
[features]
backend-qt = ["i-slint-backend-selector/backend-qt", "std"]
backend-winit = ["i-slint-backend-selector/backend-winit", "std"]
backend-winit-x11 = ["i-slint-backend-selector/backend-winit-x11", "std"]
backend-winit-wayland = ["i-slint-backend-selector/backend-winit-wayland", "std"]
backend-linuxkms = ["i-slint-backend-selector/backend-linuxkms", "std"]
backend-linuxkms-noseat = ["i-slint-backend-selector/backend-linuxkms-noseat", "std"]
renderer-femtovg = ["i-slint-backend-selector/renderer-femtovg"]
renderer-skia = ["i-slint-backend-selector/renderer-skia"]
renderer-skia-opengl = ["i-slint-backend-selector/renderer-skia-opengl", "renderer-skia"]
renderer-skia-vulkan = ["i-slint-backend-selector/renderer-skia-vulkan", "renderer-skia"]
renderer-software = ["i-slint-backend-selector/renderer-software"]
accessibility = ["i-slint-backend-selector/accessibility"]
interpreter = ["slint-interpreter", "spin_on", "std"]
backend-testing = ["i-slint-backend-testing"]

std = [
  "i-slint-core/default",
  "i-slint-core/image-default-formats",
  "i-slint-backend-selector",
  "i-slint-core/raw-window-handle-06",
  "i-slint-backend-selector/raw-window-handle-06",
]

default = ["std", "backend-winit", "renderer-femtovg", "backend-qt"]

[dependencies]
i-slint-backend-selector = { workspace = true, optional = true }
i-slint-core = { workspace = true, features = ["ffi"] }
slint-interpreter = { workspace = true, features = ["ffi", "compat-1-2"], optional = true }
i-slint-backend-testing = { workspace = true, optional = true }
spin_on = { workspace = true, optional = true }
unicode-segmentation = { workspace = true }
